# soi-synchro

./: .gitignore  CMakeLists.txt  README.md  main.c  queue.h  queue.h.gch  sem.h  sem.h.gch  semaphore.h
monitors/: Buffer.hpp  CMakeLists.txt  Makefile  Monitor.hpp  Person.hpp  main.cpp  test_main.cpp
monitors/include/: Buffer.hpp  Letter.hpp  Monitor.hpp  Person.hpp
monitors/src/: Buffer.cpp  Buffer.hpp  Consumer.cpp  Letter.cpp  Monitor.cpp  Person.cpp  Person.hpp  Producer.cpp  main.cpp
semaphores/: queue.h
